# asimov-template-module

./: Cargo.toml  Makefile  README.md
.asimov/: module.yaml
.github/workflows/: release.yaml
src/: blocks.rs  lib.rs  main.rs  prelude.rs
src/blocks/: square.rs
src/emitter/: main.rs
