# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-template-module"
version = "0.0.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module."
#documentation = "https://docs.rs/asimov-template-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-template-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]              # TODO
publish = false

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std"]
tracing = ["asimov-module/tracing", "clientele?/tracing"]
unstable = []

[dependencies]
asimov-module = { version = "25.0.0-dev.12", default-features = false }
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.7", default-features = false, features = [
    "clap",
    "std",
], optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-template-emitter"
path = "src/emitter/main.rs"
required-features = ["cli"]
